third_party/move/move-compiler-v2/tests/checking/typing/assign_duplicate_assigning.exp

Diagnostics:
error: duplicate assignment to `x`
  ┌─ tests/checking/typing/assign_duplicate_assigning.move:6:13
  │
6 │         (x, x) = (0, 0);
  │             ^

error: duplicate assignment to `f`
  ┌─ tests/checking/typing/assign_duplicate_assigning.move:8:15
  │
8 │         (f, R{f}, f) = (0, R { f: 0 }, 0);
  │               ^

error: duplicate assignment to `f`
  ┌─ tests/checking/typing/assign_duplicate_assigning.move:8:19
  │
8 │         (f, R{f}, f) = (0, R { f: 0 }, 0);
  │                   ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/typing/assign_duplicate_assigning.move:8:42
  │
8 │         (f, R{f}, f) = (0, R { f: 0 }, 0);
  │                                          ^
